src/styles/components/popup.scss
//
// Opacity transition here is weird because wrapper needs to appear fast
// For backdrop-filter to be fully rendered before children fade in
//

#popup {
	display: flex;
	position: fixed;
	box-sizing: border-box;
	font-size: 15px;
	bottom: 4vw;
	left: 4vw;
	gap: 0.6em;
	opacity: 0;
	z-index: 2;
	transition: opacity 0.2s;

	&.shown,
	&.shown #popup_text,
	&.shown #popup_buttons a {
		opacity: 1;
	}
}

#popup_text,
#popup_buttons a {
	border-radius: 8px;
	opacity: 0;
	cursor: pointer;
	backdrop-filter: blur(2em);
	-webkit-backdrop-filter: blur(2em);
	transition: opacity 2s, background-color 0.1s, color 0.1s;
}

#popup_buttons {
	display: flex;
	flex-direction: column;
	justify-content: stretch;
	min-width: 9em;
	gap: 0.6em;

	a {
		height: 100%;
		display: flex;
		align-items: center;
		justify-content: center;
		text-decoration: none;
		color: white;
		background-color: #fff2;
		border: 1px solid #fff1;

		&:hover {
			background-color: #fff4;
		}

		&:active {
			opacity: 0.8;
		}
	}
}

#popup_text {
	display: flex;
	position: relative;
	align-items: center;
	text-align: initial;
	column-gap: 1em;
	padding: 1em;
	overflow: hidden;
	background-color: #fff2;
	border: 1px solid #fff1;
}

#popup_icon {
	transition: opacity 0.1s;
}

#popup_desc {
	transition: color 0.1s;
}

#popup_close {
	position: absolute;
	display: flex;
	align-items: center;
	justify-content: center;
	left: 0;
	opacity: 0;
	z-index: 2;
	height: 100%;
	width: 100%;
	font-size: 1.6em;
	font-weight: bolder;
	transition: opacity 0.1s, background-color 0.1s;

	&:hover {
		opacity: 1;
		background-color: #2222;
	}

	&:active {
		background-color: #2224;
	}
}

#popup_close:hover ~ #popup_desc {
	color: transparent;
}

#popup_close:hover ~ #popup_icon {
	opacity: 0;
}

//
//	Review
//

#popup.review #popup_release,
#popup.review #popup_icon {
	display: none;
}

#popup.review #popup_desc {
	width: 16em;
}

//
//	Announcements
//

#popup.announce {
	flex-direction: column;
}

#popup.announce #popup_desc {
	width: 16em;
}

#popup.announce #popup_review,
#popup.announce #popup_donate {
	display: none;
}

#popup.announce #popup_buttons a {
	min-height: 3em;
}

//
//	Announce 19
//

#popup_icon {
	width: 4em;
	height: 4em;
	padding: 0.5em;
	border-radius: 0.5em;
	box-sizing: border-box;
	background: linear-gradient(135deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);

	> div {
		width: 3em;
		height: 3em;
		padding: 3px;
		border-radius: 4px;
		border: 1px solid #fff2;
		background-color: #fff2;
		backdrop-filter: blur(2em);
		-webkit-backdrop-filter: blur(2em);
		box-sizing: border-box;
	}

	span {
		font-size: 1.5em;
		line-height: 1em;
		font-weight: bold;
	}
}

